--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ background-color: #fdfcfc;
 line-height: 1.5;
 margin: 0;
 border: 0;
-overflow-x: hidden;
+overflow: hidden;
 }
 header{
     background-color: black;
@@ -115,7 +115,7 @@ header #imgr{
 	        animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
 
-t-keyframes slide-top {
+.t-keyframes slide-top {
     0% {
       -webkit-transform: translateY(0);
               transform: translateY(0);
